# Cosmic-Wanderer

./: Cargo.toml
cosmic-wandener-opener/: Cargo.toml
src/: config.rs  entries.rs  main.rs  niri.rs
ui/: app-window.slint
