[package]
name = "cosmic-wanderer"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = {version = "1.14.1", features = []}
freedesktop-desktop-entry = "=0.7.11"
shlex = "1.3.0"
freedesktop-icons = "0.4.0"
fuzzy-matcher = "0.3.7"
termion = "4.0.6"
env_logger = "0.11"
log = "0.4.29"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
notify-rust = "4"
notify = "8.2.0"
parking_lot = "0.12"
config = "0.15.19"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
lto = "fat"
opt-level = 3
strip = true 
codegen-units = 1
debug = 0
debug-assertions = false
